overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,8 @@ html {
 body {
   @include flex-column-center;
   position: relative;
+  width: 100vw;
+  max-width: 100vw;
   height: 100vh;
   margin: 0;
   background: linear-gradient(
@@ -122,6 +124,7 @@ body {
 .tribune-div {
   @include flex-column-center;
   position: relative;
+  overflow: hidden;
 }
 .tribune-body {
   width: 350px;
@@ -214,7 +217,7 @@ span {
     color: rgba(255, 255, 0, 0.632);
   }
 }
-@media screen and (min-width: 391px) {
+@media screen and (min-width: 431px) {
   // ########### TRIBUNE ###########
   .tribune-div {
     transform: scale(1.6);
